# notifications

./: .gitignore  README.md  main.py  pyproject.toml
UpworkScraper/: .gitignore  temp.py  upwork_best_matches_scraper.py
UpworkScraper-main/: requirements.txt
UpworkScraper/utils/: database.py  job_helpers.py
src/: database.py  llm_filter.py  main.py  notifier.py  screener.py
tests/: llm_filter_test.py
