[project]
name = "notifications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "attrs==23.2.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "groq>=1.1.1",
    "h11==0.14.0",
    "idna==3.6",
    "outcome==1.3.0.post0",
    "pysocks==1.7.1",
    "python-dotenv>=1.2.2",
    "requests==2.31.0",
    "selenium==4.18.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.25.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.10.0",
    "undetected-chromedriver==3.5.5",
    "urllib3==2.2.1",
    "websockets>=13.0",
    "wsproto==1.2.0",
]
